syntax = "proto3";

package oauth2;

option go_package = "github.com/dehwyy/makoto/libs/grpc/generated/oauth2";

service OAuth2Rpc {
  rpc CreateRedirectUrl(CreateRedirectUrlRequest) returns (CreateRedirectUrlResponse);
  rpc ExchangeCodeToToken(ExchangeCodeToTokenRequest) returns (ExchangeCodeToTokenResponse);
  rpc RefreshTheToken(RefreshTheTokenRequest) returns (RefreshTheTokenResponse);
}

message CreateRedirectUrlRequest {
  string provider = 1;
}

message CreateRedirectUrlResponse {
  string redirect_url = 1;
  string csrf_token = 2;
}

message ExchangeCodeToTokenRequest {
  string provider = 1;
  string code = 2;
  string csrf_token = 3;
}

message ExchangeCodeToTokenResponse {
  string access_token = 1;
  optional string refresh_token = 2;
}

message RefreshTheTokenRequest {
  string provider = 1;
  string refresh_token = 2;
}

message RefreshTheTokenResponse {
  string access_token = 1;
}

